# chapkit_simple_multistep_model

./: .gitignore  Dockerfile  Makefile  README.md  compose.ghcr.yml  compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish-docker.yml
docs/: migration-to-chapkit.md
example_data/: future_data.csv  historic_data.csv  training_data.csv
src/chapkit_simple_multistep_model/: __main__.py  cli.py  main.py  predict.py
src/simple_multistep_model/: __init__.py  __main__.py  cli.py  config.py  main.py  multistep.py  one_step_model.py  predict.py  train.py  transformations.py
tests/: conftest.py  test_smoke.py
