[build-system]
requires = ["uv_build>=0.5,<0.12"]
build-backend = "uv_build"

[project]
name = "chapkit_simple_multistep_model"
version = "0.1.0"
description = "Multistep recursive forecasting model exposed as a chapkit service"
requires-python = ">=3.13"
dependencies = [
    "chapkit>=0.20.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "skpro>=2.12.0",
    "xarray>=2026.4.0",
]

[project.scripts]
train = "chapkit_simple_multistep_model.cli:train_cli"
predict = "chapkit_simple_multistep_model.cli:predict_cli"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "W", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
